fixed contrast

--- a/lesson5/css/small.css
+++ b/lesson5/css/small.css
@@ -100,6 +100,10 @@ header h2 {
   background-color: #0077b6;
 }
 
+#menu ul li.active a {
+  color: white;
+}
+
 #menu.show-menu {
   opacity: 1;
   max-height: 500px; /* Fix transition for height */
@@ -209,7 +213,7 @@ section:not(#contact) {
 }
 
 #article a {
-  color: #00b4d8;
+  color: #0077b6;
 }
 
 /*----------- FOOTER --------------*/
